# Onboard

./: README.md  pyproject.toml
src/onboard/: __init__.py  cli.py  detectors.py  git_source.py  llm.py  models.py  report.py  scanner.py
tests/: test_cli.py  test_detectors.py  test_git_source.py  test_llm.py  test_scanner_report.py
